--- a/furnitures.html
+++ b/furnitures.html
@@ -53,7 +53,7 @@
                                <li class="nav-item">
                                 <a class="nav-link" href="about.html">Empresa</a></li>
                                <li class="nav-item">
-                               <!--  <a class="nav-link" href="company.html">Servicio</a></li> -->
+                                <a class="nav-link" href="company.html">Producto</a></li>
                                <li class="#" href="#">
                                 <a class="nav-link" href="furnitures.html">Equipo</a></li>
                                <li class="nav-item" href="#">
@@ -130,7 +130,7 @@
               <ul >
                 <li><a href="home.html">Inicio</a></li>
                 <li><a href="about.html">Empresa </a></li>
-                <!-- <li><a href="company.html">Servicios</a></li> -->
+                <li><a href="company.html">Producto</a></li>
                 <li><a href="furnitures.html">Equipo</a></li>
                 <li><a href="contact.html">Contactenos</a></li>
               </ul>
