--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                <li class="nav-item">
                                 <a class="nav-link" href="about.html">Empresa</a></li>
                                <li class="nav-item">
-                                <!-- <a class="nav-link" href="company.html">Servicio</a></li> -->
+                                <a class="nav-link" href="company.html">Producto</a></li>
                                <li class="#" href="#">
       	                        <a class="nav-link" href="furnitures.html">Equipo</a></li>
                                <li class="nav-item" href="#">
@@ -225,34 +225,64 @@
     </div>
   </div>
   <!-- our furniture section end -->
-	<!-- testi monial section start -->	
-	<!-- <div class="testi_monial_section layout_padding">
-		<div class="container">
+ <!-- testi monial section start --> 
+  <div class="testi_monial_section layout_padding">
+    <div class="container">
            <div id="my_carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                <h1 class="testi_monila_text">Testi <span style="background-color: #fee421; color: #fff; padding: 0px 5px;">Monial</span></h1>
-			<div class="testimonila_inner">
-				<div class="testing_img"><img src="images/img-10.png"></div>
-				<h2 class="helina_text">Helina</h2>
-				<p class="dolor_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look</p>
-			</div>
+                <h1 class="testi_monila_text">Etapa <span style="background-color: #fee421; color: #fff; padding: 0px 5px;">Uno</span></h1>
+      <div class="testimonila_inner">
+        <div class="row">
+      <div class="col-sm-4">
+        <div class="image_6"><img src="images/img-10.png"></div>
+      </div>
+      <div class="col-sm-4">
+        <div class="image_6"><img src="images/img-11.png"></div>
+      </div>
+      <div class="col-sm-4">
+        <div class="image_6"><img src="images/img-12.png"></div>
+      </div>
+    </div>
+        <h2 class="helina_text">Helina</h2>
+        <p class="dolor_text">Esta es la etapa de pesado de los huevos, puede llegar a ser muy rápido dependiendo de la agilidad del obrero.</p>
+      </div>
     </div>
     <div class="carousel-item">
-      <h1 class="testi_monila_text">Testi <span style="background-color: #fee421; color: #fff; padding: 0px 5px;">Monial</span></h1>
-			<div class="testimonila_inner">
-				<div class="testing_img"><img src="images/img-10.png"></div>
-				<h2 class="helina_text">Helina</h2>
-				<p class="dolor_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look</p>
-			</div>
+      <h1 class="testi_monila_text">Etapa <span style="background-color: #fee421; color: #fff; padding: 0px 5px;">Dos</span></h1>
+      <div class="testimonila_inner">
+      <div class="row">
+      <div class="col-sm-4">
+        <div class="image_6"><img src="images/img-13.png"></div>
+      </div>
+      <div class="col-sm-4">
+        <div class="image_6"><img src="images/img-14.png"></div>
+      </div>
+      <div class="col-sm-4">
+        <div class="image_6"><img src="images/img-15.png"></div>
+      </div>
+    </div>
+        <h2 class="helina_text">Helina</h2>
+        <p class="dolor_text">Esta es la etapa de clasificación segun peso, por medio del color que se alumbra en la bandeja.</p>
+      </div>
     </div>
     <div class="carousel-item">
-      <h1 class="testi_monila_text">Testi <span style="background-color: #fee421; color: #fff; padding: 0px 5px;">Monial</span></h1>
-			<div class="testimonila_inner">
-				<div class="testing_img"><img src="images/img-10.png"></div>
-				<h2 class="helina_text">Helina</h2>
-				<p class="dolor_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look</p>
-			</div>
+      <h1 class="testi_monila_text">Aplicación<span style="background-color: #fee421; color: #fff; padding: 0px 5px;"> Móvil</span></h1>
+      <div class="testimonila_inner">
+       <div class="row">
+      <div class="col-sm-4">
+        <div class="image_6"><img src="images/img-16.png"></div>
+      </div>
+      <div class="col-sm-4">
+        <div class="image_6"><img src="images/img-17.png"></div>
+      </div>
+      <div class="col-sm-4">
+        <div class="image_6"><img src="images/img-18.png"></div>
+      </div>
+    </div>
+        <h2 class="helina_text">Helina</h2>
+        <p class="dolor_text">Un aplicativo móvil nos permite llevar la cuenta de los huevos pesados y nos muestra estadisticas de la producción en general .</p>
+      </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#my_carousel" role="button" data-slide="prev">
@@ -264,9 +294,9 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-		</div>
-	</div> -->
-	<!-- testi monial section end -->
+    </div>
+  </div>
+  <!-- testi monial section end -->
 <!-- contact section start -->  
     <div class="layout_padding contact_section">
       <div class="container">
@@ -330,11 +360,11 @@
          
           <div class="col-md-12">
             <div class="useful_main border_right0">
-              <h2 class="useful_text">Menus</h2>
+              <h2 class="useful_text">Menús</h2>
               <ul >
                 <li><a href="home.html">Inicio</a></li>
                 <li><a href="about.html">Empresa </a></li>
-                <!-- <li><a href="company.html">Servicios</a></li> -->
+                <li><a href="company.html">Producto</a></li>
                 <li><a href="furnitures.html">Equipo</a></li>
                 <li><a href="contact.html">Contactenos</a></li>
               </ul>
